# dotenv-cpp

./: CMakeLists.txt  LICENSE  README.md  TODO.txt  dotenv.h
.github/workflows/: build.yml
cmake/: dotenv-config.cmake  laserpants_dotenv-config.cmake
docs/: Doxyfile.in
dotenv/: dotenv.h
include/laserpants/dotenv/: dotenv.h
src/: dotenv-config-version.cmake.in  dotenv-config.h.in  laserpants_dotenv-config.h.in
tests/: base_test.cc
